--- a/QuoteSearch/src/index.css
+++ b/QuoteSearch/src/index.css
@@ -3,6 +3,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  background-color: plum;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
