--- a/QuoteSearch/src/index.css
+++ b/QuoteSearch/src/index.css
@@ -18,6 +18,7 @@
 
 body {
     height: 100vh;
+    position: relative;
 }
 
 #root {
@@ -45,15 +46,27 @@ body {
 }
 
 .home {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    max-width: 100%;
+    width: 100vh;
+    text-align: center;
+}
+
+.search {
+    padding: 4px;
     max-height: 100%;
     max-width: 100%;
     height: 100vh;
     width: 100vw;
-    text-align: center;
+    text-align: left;
 }
 
 .search-bar {
     text-align: center;
+    background-color: white;    
     padding: 8px;
     margin: 4px;
     max-width: 100%;
